tests/error/no_cast.gw
#! [contains] can't cast
class C{}
class D{}

C c;
D d;
<<< c $ D >>>;
<<< d >>>;
